Fix default overflow for gx-table-cell (#37)

--- a/src/components/table-cell/table-cell.scss
+++ b/src/components/table-cell/table-cell.scss
@@ -1,6 +1,7 @@
 @import "../common/_base";
 
 gx-table-cell {
+  overflow: hidden;
   @include containerCell();
 
   flex-direction: row;
